--- a/legacy-app/SQUER.Workshop.LegacyApp/Views/Customers/GetCustomerInfo.cshtml
+++ b/legacy-app/SQUER.Workshop.LegacyApp/Views/Customers/GetCustomerInfo.cshtml
@@ -41,17 +41,21 @@
             <input type="text" class="form-control" id="deliverycity" name="Delivery_city" value="@Model.Delivery_city">
         </div>
         <div class="form-group">
-            <label for="billingaddress">Billing Address:</label>
-            <input type="text" class="form-control" id="billingaddress" name="Billing_address" value="@Model.Billing_address">
+            <label for="billing_address">Billing Address:</label>
+            <input type="text" class="form-control" id="billing_address" name="Billing_address" value="@Model.Billing_address">
         </div>
         <div class="form-group">
-            <label for="billingzipcode">Billing Zip Code:</label>
-            <input type="text" class="form-control" id="billingzipcode" name="Billing_zipcode" value="@Model.Billing_zipcode">
+            <label for="billing_zipcode">Billing Zip Code:</label>
+            <input type="text" class="form-control" id="billing_zipcode" name="Billing_zipcode" value="@Model.Billing_zipcode">
         </div>
         <div class="form-group">
-            <label for="billingcity">Billing City:</label>
-            <input type="text" class="form-control" id="billingcity" name="Billing_city" value="@Model.Billing_city">
+            <label for="billing_city">Billing City:</label>
+            <input type="text" class="form-control" id="billing_city" name="Billing_city" value="@Model.Billing_city">
         </div>
+
+
+        <br/>
+
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 }
@@ -91,17 +95,18 @@ else
             <input type="text" class="form-control" id="deliverycity" name="Delivery_city">
         </div>
         <div class="form-group">
-            <label for="billingaddress">Billing Address:</label>
-            <input type="text" class="form-control" id="billingaddress" name="Billing_address">
+            <label for="billing_address">Billing Address:</label>
+            <input type="text" class="form-control" id="billing_address" name="Billing_address">
         </div>
         <div class="form-group">
-            <label for="billingzipcode">Billing Zip Code:</label>
-            <input type="text" class="form-control" id="billingzipcode" name="Billing_zipcode">
+            <label for="billing_zipcode">Billing Zip Code:</label>
+            <input type="text" class="form-control" id="billing_zipcode" name="Billing_zipcode">
         </div>
         <div class="form-group">
-            <label for="billingcity">Billing City:</label>
-            <input type="text" class="form-control" id="billingcity" name="Billing_city">
+            <label for="billing_city">Billing City:</label>
+            <input type="text" class="form-control" id="billing_city" name="Billing_city">
         </div>
+        <br/>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 }
