--- a/legacy-app/SQUER.Workshop.LegacyApp/Views/Customers/Index.cshtml
+++ b/legacy-app/SQUER.Workshop.LegacyApp/Views/Customers/Index.cshtml
@@ -4,22 +4,23 @@
     ViewBag.Title = "Customers";
     Layout = "_Layout";
 }
-
+<br/><br/>
 <table class="table table-responsive-lg table-striped">
     <thead>
+    <tr class="table-secondary  text-center">
+        <td colspan="8">Customers</td>
+    </tr>
     <tr class="table-info">
-        <td>id</td>
-        <td>ssn</td>
-        <td>email</td>
-        <td>username</td>
-        <td>fullname</td>
-        <td>delivery address</td>
-        <td>billing address</td>
+        <td>ID</td>
+        <td>Ssn</td>
+        <td>Email</td>
+        <td>Username</td>
+        <td>Full Name</td>
+        <td>Delivery Address</td>
+        <td>Billing Address</td>
         <td>
-            actions
-            |
-            <a class="btn-link btn-outline-success" asp-controller="Customers" asp-action="GetCustomerInfo">
-                New
+            <a class="btn btn-link" asp-controller="Customers" asp-action="GetCustomerInfo">
+                New Customer
             </a>
         </td>
     </tr>
@@ -44,17 +45,20 @@
                 }
             </td>
             <td>
-                <a class="btn btn-primary"
-                   asp-controller="Customers" asp-action="GetCustomerInfo"
-                   asp-route-customerId="@customer.Customer_id">
-                    Edit
-                </a>
-                |
-                <a class="btn-link btn-outline-success"
-                   asp-controller="Orders" asp-action="GetBuyTickets"
-                   asp-route-customerId="@customer.Customer_id">
-                    Order
-                </a>
+                <div class="btn-group btn-group-sm">
+
+                    <a class="btn btn-sm btn-primary"
+                       asp-controller="Customers" asp-action="GetCustomerInfo"
+                       asp-route-customerId="@customer.Customer_id">
+                        Edit
+                    </a>
+
+                    <a class="btn btn-sm btn-secondary"
+                       asp-controller="Orders" asp-action="GetBuyTickets"
+                       asp-route-customerId="@customer.Customer_id">
+                        Orders
+                    </a>
+                </div>
             </td>
         </tr>
     }
